css/section/footer.css
.footer-area {
  background: var(--primary-color);
}

.footer-title {
  font-size: var(--fs-regular);
}

.footer-list li {
  margin-bottom: 10px;
}

.footer-list a {
  color: var(--bg-color);
  font-size: var(--fs-regular);
  text-decoration: none;
  opacity: 0.8;
  transition: 0.3s;
}

.footer-list a:hover {
  opacity: 1;
}

.btn-outline-light:hover {
  background: var(--bg-color);
  color: var(--primary-color);
}

.img-fluid {
  width: 61px;
  height: 25px;
}

.footer-payments-icon {
  width: 32px;
  height: 20px;
}

.footer-social-icon {
  width: 28px;
  height: 28px;
}

.copy-right {
  font-size: var(--fs-typ);
}

.footer-logo {
  padding-top: 40px;
  padding-bottom: 32px;
}

@media (width >= 768px) {
  .footer-logo {
    margin-right: 126px;
  }

  .footer-payments-icon {
    width: 44px;
    height: 28px;
  }

  .copy-right {
    font-size: var(--fs-regular);
  }
}

@media (width >= 992px) {
  .footer-logo {
    margin-right: 144px;
  }

  .footer-row {
    --bs-gutter-x: 78px;
  }
}

